fixing alignment of api thumbnail boxes

--- a/bootstrap/css/style.css
+++ b/bootstrap/css/style.css
@@ -6226,6 +6226,11 @@ form .col-xs-8 {
 .dpla_image {
   max-width: 100%;
 }
+@media (min-width: 767px) {
+  .thumbnail {
+    min-height: 310px;
+  }
+}
 .thumbnail > img,
 .thumbnail a > img {
   max-height: 60px;
