--- a/bootstrap/less/custom.less
+++ b/bootstrap/less/custom.less
@@ -53,6 +53,11 @@ form {
 .dpla_image {
 	max-width:100%;
 }
+.thumbnail {
+	@media(min-width:767px) {
+		min-height:310px;
+	}
+}
 .thumbnail > img, .thumbnail a > img {
 	max-height: 60px;
 	max-width: 100%;
